Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11049

lgss-sk: incorrect 'fsname' and 'nodemap' string handling

XMLWordPrintable

    • 3
    • 9223372036854775807

      Hi,

      lgss_sk does not properly handle 'fsname' and 'nodemap' strings passed by user. It forgets to add the null byte at the end.
      I will push a patch to address this issue.

      Cheers,
      Sebastien.

            sbuisson Sebastien Buisson (Inactive)
            sbuisson Sebastien Buisson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: