lustre/utils/gss/lgss_sk.c
@@ -542,8 +542,8 @@ int main(int argc, char **argv)
 		config->skc_type = type;
 		generate_prime = type & SK_TYPE_CLIENT;
 
-		strncpy(config->skc_nodemap, SK_DEFAULT_NODEMAP,
-			strlen(SK_DEFAULT_NODEMAP));
+		/* SK_DEFAULT_NODEMAP is made to fit in skc_nodemap */
+		strcpy(config->skc_nodemap, SK_DEFAULT_NODEMAP);
 
 		if (!datafile)
 			datafile = "/dev/random";
@@ -560,9 +560,15 @@ int main(int argc, char **argv)
 	if (prime_bits != -1)
 		config->skc_prime_bits = prime_bits;
 	if (fsname)
-		strncpy(config->skc_fsname, fsname, strlen(fsname));
+		/* fsname string length was checked when parsing
+		 * command-line options
+		 */
+		strcpy(config->skc_fsname, fsname);
 	if (nodemap)
-		strncpy(config->skc_nodemap, nodemap, strlen(nodemap));
+		/* nodemap string length was checked when parsing
+		 * command-line options
+		 */
+		strcpy(config->skc_nodemap, nodemap);
 	if (mgsnids && parse_mgsnids(mgsnids, config))
 		goto error;
 	if (sk_validate_config(config)) {
